# local-mind

./: .gitignore  .linkignore  CHANGELOG.md  CONTRIBUTING.md  LINK.md  README.md  SECURITY.md  link.py  mcp_server.py  pyproject.toml  serve.py  update.sh  watch.sh
.github/workflows/: ci.yml
docs/: api.html  cli.html  concepts.html  contributing.html  getting-started.html  index.html  mcp.html  security.html  troubleshooting.html  ui.html  why-link.html
docs/assets/: site.css  site.js
integrations/: README.md
integrations/_shared/: check-raw.sh  instructions.sh  link-instructions-project.md  link-instructions.md  scaffold.sh
integrations/antigravity/: install.sh  uninstall.sh
integrations/claude-code/: install.sh  uninstall.sh
integrations/codex/: install.sh  uninstall.sh
integrations/copilot/: install.sh  uninstall.sh
mcp_package/: .hgignore  README.md  pyproject.toml  server.json
mcp_package/link_core/: __init__.py  backup.py  benchmark.py  capture.py  cli_admin.py  cli_memory.py  cli_parser.py  cli_query.py  cli_runtime.py  demo.py  doctor.py  files.py  frontmatter.py  ingest.py  log.py  markdown.py  mcp_verify.py  memory.py  operations.py  prompts.py  query.py  raw.py  schema.py  search.py  security.py  status.py  validation.py  version.py  web_assets.py  web_graph.py  web_health.py  web_home.py  web_http.py  web_ingest.py  web_layout.py  web_memory.py  web_memory_pages.py  web_pages.py  web_prompts.py  web_proposals.py  (+3 more)
mcp_package/link_mcp/: __init__.py  __main__.py  server.py
scripts/: check_release_hygiene.py  check_runtime_duplication.py  check_tool_contract.py  generate_docs_media.py  prepare_release.py  smoke_first_use.py  smoke_http_viewer.py  smoke_large_wiki.py  smoke_mcp_stdio.py
tests/: test_backup_core.py  test_benchmark_core.py  test_capture_core.py  test_cli_admin_core.py  test_cli_memory_core.py  test_cli_parser_core.py  test_cli_query_core.py  test_cli_runtime_core.py  test_demo_core.py  test_demo_snapshot.py  test_docs_site.py  test_doctor_core.py  test_files_core.py  test_frontmatter_core.py  test_homebrew_formula.py  test_ingest_core.py  test_installers.py  test_large_wiki_smoke.py  test_link_cli.py  test_log_core.py  test_markdown_core.py  test_mcp_contract.py  test_mcp_verify_core.py  test_memory_core.py  test_operations_core.py  test_prepare_release.py  test_prompts_core.py  test_query_core.py  test_raw_core.py  test_release_hygiene.py  test_runtime_duplication.py  test_schema_core.py  test_security_core.py  test_serve.py  test_status_core.py  test_tool_contract.py  test_validation_core.py  test_web_graph_core.py  test_web_health_core.py  test_web_home_core.py  (+10 more)
wiki/: _backlinks.json  index.md  log.md
(+12 files in other folders)
