[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "link-mcp"
version = "1.0.6"
description = "MCP server for the Link personal knowledge wiki — search, context, and graph traversal"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0"]
keywords = ["mcp", "knowledge-base", "wiki", "llm", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/gowtham0992/link"
Repository = "https://github.com/gowtham0992/link"

[project.scripts]
link-mcp = "link_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["link_mcp"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".mcpregistry_*",
    ".env",
    ".env.*",
    "*.token",
    "*.key",
    "*.pem",
    "*.p8",
    "*.p12",
    "id_rsa",
    "id_ed25519",
    "dist/",
]
