[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "link-mcp"
version = "1.0.7"
description = "MCP server for Link local agent memory — remember, recall, search, context, and graph traversal"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0"]
keywords = ["mcp", "memory", "knowledge-base", "wiki", "llm", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/gowtham0992/link"
Repository = "https://github.com/gowtham0992/link"

[project.scripts]
link-mcp = "link_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["link_mcp", "link_core"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".mcpregistry_*",
    ".env",
    ".env.*",
    "*.token",
    "*.key",
    "*.pem",
    "*.p8",
    "*.p12",
    "id_rsa",
    "id_ed25519",
    "dist/",
]
